added weightage criteria. Made hyper params optional

--- a/docs/api/1.0.1-SNAPSHOT.md
+++ b/docs/api/1.0.1-SNAPSHOT.md
@@ -4,11 +4,11 @@
 
 ### ClusTree *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
-<p style="word-wrap: break-word">dfhgdg</p>
+<p style="word-wrap: break-word">Performs clustering on a streaming data set. Initially a micro cluster model is generated using  ClusTree algorithm and weighted k-means is applied on micro clusters periodically to generate a macro cluster model with required number of clusters. Data points can be of any dimensionality but the dimensionality should be constant throughout the stream. Euclidean distance is taken as the distance metric. </p>
 
 <span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
-streamingml:ClusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.retrain, <DOUBLE|FLOAT|INT|LONG> model.features)
+streamingml:ClusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.refresh.macro.model, <INT> max.height.of.tree, <INT> horizon, <DOUBLE|FLOAT|INT|LONG> model.features)
 ```
 
 <span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
@@ -46,8 +46,24 @@ streamingml:ClusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterat
         <td style="vertical-align: top">No</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">no.of.events.to.retrain</td>
-        <td style="vertical-align: top; word-wrap: break-word">number of events to recalculate cluster centers. </td>
+        <td style="vertical-align: top">no.of.events.to.refresh.macro.model</td>
+        <td style="vertical-align: top; word-wrap: break-word">number of events to recalculate the k-means macro cluster centers. </td>
+        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">INT</td>
+        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">No</td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top">max.height.of.tree</td>
+        <td style="vertical-align: top; word-wrap: break-word">The maximum no of levels in the ClusTree. If it is given as 10 then at most there can be 3^10 micro clusters in the micro cluster model. Advisable to set within 5-8 since having a lot of micro-clusters will consume lot of memory and will take longer to build macro cluster model.</td>
+        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">INT</td>
+        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">No</td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top">horizon</td>
+        <td style="vertical-align: top; word-wrap: break-word">This controls the decay of weights of old micro-clusters. This helps manage the concept drift. If horizon is set as 1000, then a micro cluster which hasn't been updated recently will lose its weight by half after 1000 events. Horizon is technically the half-life of micro-cluster weights.</td>
         <td style="vertical-align: top"></td>
         <td style="vertical-align: top">INT</td>
         <td style="vertical-align: top">No</td>
@@ -84,9 +100,14 @@ streamingml:ClusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterat
 <span id="examples" class="md-typeset" style="display: block; font-weight: bold;">Examples</span>
 <span id="example-1" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">EXAMPLE 1</span>
 ```
-fgdf
+@App:name('ClusTreeTestSiddhiApp') 
+define stream InputStream (x double, y double);
+@info(name = 'query1') 
+from InputStream#streamingml:ClusTree('model0', 2, 10, 20, 5, 50, x, y) 
+select closestCentroidCoordinate1, closestCentroidCoordinate2, x, y 
+insert into OutputStream;
 ```
-<p style="word-wrap: break-word">dsfgdfg</p>
+<p style="word-wrap: break-word">This query will create a Siddhi app named ClusTreeTestSiddhiApp and will accept 2D inputs od doubles. The query which is named query1 will create a ClusTree model named model0 and will create a kmeans model after firsat 20 events and will refresh it every 20 events after. Number of macro clusters will be 2 and the maximum iterations of kmeans to converge will be 10. The max height of tree is set to 5 so at maximum we will get 3^5 micro clusters from ClusTree and the horizon is set as 50, so after 50 events micro clusters that were not updated will lose their weight by half.</p>
 
 ### updateHoeffdingTree *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
