did changes suggested in code review

--- a/docs/api/1.0.1-SNAPSHOT.md
+++ b/docs/api/1.0.1-SNAPSHOT.md
@@ -2,13 +2,13 @@
 
 ## Streamingml
 
-### ClusTree *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
+### clusTree *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
 <p style="word-wrap: break-word">Performs clustering on a streaming data set. Initially a micro cluster model is generated using  ClusTree algorithm and weighted k-means is applied on micro clusters periodically to generate a macro cluster model with required number of clusters. Data points can be of any dimensionality but the dimensionality should be constant throughout the stream. Euclidean distance is taken as the distance metric. </p>
 
 <span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
-streamingml:ClusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.refresh.macro.model, <INT> max.height.of.tree, <INT> horizon, <DOUBLE|FLOAT|INT|LONG> model.features)
+streamingml:clusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.refresh.macro.model, <INT> max.height.of.tree, <INT> horizon, <DOUBLE|FLOAT|INT|LONG> model.features)
 ```
 
 <span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
