documentation comments and moa header issue fixed

--- a/docs/api/1.0.1-SNAPSHOT.md
+++ b/docs/api/1.0.1-SNAPSHOT.md
@@ -8,7 +8,7 @@
 
 <span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
-streamingml:clusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.refresh.macro.model, <INT> max.height.of.tree, <INT> horizon, <DOUBLE|FLOAT|INT|LONG> model.features)
+streamingml:clusTree(<INT> no.of.clusters, <INT> max.iterations, <INT> no.of.events.to.refresh.macro.model, <INT> max.height.of.tree, <INT> horizon, <DOUBLE|FLOAT|INT|LONG> model.features)
 ```
 
 <span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
@@ -22,14 +22,6 @@ streamingml:clusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterat
         <th>Dynamic</th>
     </tr>
     <tr>
-        <td style="vertical-align: top">model.name</td>
-        <td style="vertical-align: top; word-wrap: break-word">The name for the model that is going to be created/reused for prediction</td>
-        <td style="vertical-align: top"></td>
-        <td style="vertical-align: top">STRING</td>
-        <td style="vertical-align: top">No</td>
-        <td style="vertical-align: top">No</td>
-    </tr>
-    <tr>
         <td style="vertical-align: top">no.of.clusters</td>
         <td style="vertical-align: top; word-wrap: break-word">The assumed number of natural clusters (numberOfClusters) in the data set.</td>
         <td style="vertical-align: top"></td>
@@ -40,33 +32,33 @@ streamingml:clusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterat
     <tr>
         <td style="vertical-align: top">max.iterations</td>
         <td style="vertical-align: top; word-wrap: break-word">Number of iterations, the process iterates until the number of maximum iterations is reached or the centroids do not change</td>
-        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">40</td>
         <td style="vertical-align: top">INT</td>
-        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">Yes</td>
         <td style="vertical-align: top">No</td>
     </tr>
     <tr>
         <td style="vertical-align: top">no.of.events.to.refresh.macro.model</td>
         <td style="vertical-align: top; word-wrap: break-word">number of events to recalculate the k-means macro cluster centers. </td>
-        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">100</td>
         <td style="vertical-align: top">INT</td>
-        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">Yes</td>
         <td style="vertical-align: top">No</td>
     </tr>
     <tr>
         <td style="vertical-align: top">max.height.of.tree</td>
         <td style="vertical-align: top; word-wrap: break-word">The maximum no of levels in the ClusTree. If it is given as 10 then at most there can be 3^10 micro clusters in the micro cluster model. Advisable to set within 5-8 since having a lot of micro-clusters will consume lot of memory and will take longer to build macro cluster model.</td>
-        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">8</td>
         <td style="vertical-align: top">INT</td>
-        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">Yes</td>
         <td style="vertical-align: top">No</td>
     </tr>
     <tr>
         <td style="vertical-align: top">horizon</td>
         <td style="vertical-align: top; word-wrap: break-word">This controls the decay of weights of old micro-clusters. This helps manage the concept drift. If horizon is set as 1000, then a micro cluster which hasn't been updated recently will lose its weight by half after 1000 events. Horizon is technically the half-life of micro-cluster weights.</td>
-        <td style="vertical-align: top"></td>
+        <td style="vertical-align: top">1000</td>
         <td style="vertical-align: top">INT</td>
-        <td style="vertical-align: top">No</td>
+        <td style="vertical-align: top">Yes</td>
         <td style="vertical-align: top">No</td>
     </tr>
     <tr>
@@ -103,11 +95,22 @@ streamingml:clusTree(<STRING> model.name, <INT> no.of.clusters, <INT> max.iterat
 @App:name('ClusTreeTestSiddhiApp') 
 define stream InputStream (x double, y double);
 @info(name = 'query1') 
-from InputStream#streamingml:ClusTree('model0', 2, 10, 20, 5, 50, x, y) 
+from InputStream#streamingml:ClusTree(2, 10, 20, 5, 50, x, y) 
 select closestCentroidCoordinate1, closestCentroidCoordinate2, x, y 
 insert into OutputStream;
 ```
-<p style="word-wrap: break-word">This query will create a Siddhi app named ClusTreeTestSiddhiApp and will accept 2D inputs od doubles. The query which is named query1 will create a ClusTree model named model0 and will create a kmeans model after firsat 20 events and will refresh it every 20 events after. Number of macro clusters will be 2 and the maximum iterations of kmeans to converge will be 10. The max height of tree is set to 5 so at maximum we will get 3^5 micro clusters from ClusTree and the horizon is set as 50, so after 50 events micro clusters that were not updated will lose their weight by half.</p>
+<p style="word-wrap: break-word">This query will create a Siddhi app named ClusTreeTestSiddhiApp and will accept 2D inputs od doubles. The query which is named query1 will create a ClusTree model and will create a kmeans model after firsat 20 events and will refresh it every 20 events after. Number of macro clusters will be 2 and the maximum iterations of kmeans to converge will be 10. The max height of tree is set to 5 so at maximum we will get 3^5 micro clusters from ClusTree and the horizon is set as 50, so after 50 events micro clusters that were not updated will lose their weight by half.</p>
+
+<span id="example-2" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">EXAMPLE 2</span>
+```
+@App:name('ClusTreeTestSiddhiApp') 
+define stream InputStream (x double, y double);
+@info(name = 'query1') 
+from InputStream#streamingml:ClusTree(2, x, y) 
+select closestCentroidCoordinate1, closestCentroidCoordinate2, x, y 
+insert into OutputStream;
+```
+<p style="word-wrap: break-word">In this query one can note that the hyper parameters are not given. So they will be set to their default values which are mentioned above. This mode of querying is suggested for users who are not familier with ClusTree/KMeans algorithms.</p>
 
 ### updateHoeffdingTree *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
