made requested changes

--- a/docs/api/1.0.1-SNAPSHOT.md
+++ b/docs/api/1.0.1-SNAPSHOT.md
@@ -95,11 +95,11 @@ streamingml:clusTree(<INT> no.of.clusters, <INT> max.iterations, <INT> no.of.eve
 @App:name('ClusTreeTestSiddhiApp') 
 define stream InputStream (x double, y double);
 @info(name = 'query1') 
-from InputStream#streamingml:ClusTree(2, 10, 20, 5, 50, x, y) 
+from InputStream#streamingml:clusTree(2, 10, 20, 5, 50, x, y) 
 select closestCentroidCoordinate1, closestCentroidCoordinate2, x, y 
 insert into OutputStream;
 ```
-<p style="word-wrap: break-word">This query will create a Siddhi app named ClusTreeTestSiddhiApp and will accept 2D inputs od doubles. The query which is named query1 will create a ClusTree model and will create a kmeans model after firsat 20 events and will refresh it every 20 events after. Number of macro clusters will be 2 and the maximum iterations of kmeans to converge will be 10. The max height of tree is set to 5 so at maximum we will get 3^5 micro clusters from ClusTree and the horizon is set as 50, so after 50 events micro clusters that were not updated will lose their weight by half.</p>
+<p style="word-wrap: break-word">This query will create a Siddhi app named ClusTreeTestSiddhiApp and will accept 2D inputs of doubles. The query which is named query1 will create a ClusTree model and will create a kmeans model after firsat 20 events and will refresh it every 20 events after. Number of macro clusters will be 2 and the maximum iterations of kmeans to converge will be 10. The max height of tree is set to 5 so at maximum we will get 3^5 micro clusters from ClusTree and the horizon is set as 50, so after 50 events micro clusters that were not updated will lose their weight by half.</p>
 
 <span id="example-2" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">EXAMPLE 2</span>
 ```
