--- a/docs/api/1.0.1-SNAPSHOT.md
+++ b/docs/api/1.0.1-SNAPSHOT.md
@@ -8,7 +8,7 @@
 
 <span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
-streamingml:updateAMRulesRegressor(<STRING> model.name, <DOUBLE> split.confidence, <DOUBLE> tie.break.threshold, <INT> grace.period, <INT> change.detector, <INT> anomaly.detector, <DOUBLE|INT> model.features)
+streamingml:updateAMRulesRegressor(<STRING> model.name, <DOUBLE> split.confidence, <DOUBLE> tie.break.threshold, <INT> grace.period, <INT> change.detector, <INT> anomaly.detector, <DOUBLE|FLOAT|LONG|INT> model.features)
 ```
 
 <span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
@@ -73,7 +73,7 @@ streamingml:updateAMRulesRegressor(<STRING> model.name, <DOUBLE> split.confidenc
         <td style="vertical-align: top">model.features</td>
         <td style="vertical-align: top; word-wrap: break-word">Features of the model which should be attributes of the stream.</td>
         <td style="vertical-align: top"></td>
-        <td style="vertical-align: top">DOUBLE<br>INT</td>
+        <td style="vertical-align: top">DOUBLE<br>FLOAT<br>LONG<br>INT</td>
         <td style="vertical-align: top">No</td>
         <td style="vertical-align: top">No</td>
     </tr>
@@ -87,7 +87,7 @@ streamingml:updateAMRulesRegressor(<STRING> model.name, <DOUBLE> split.confidenc
     </tr>
     <tr>
         <td style="vertical-align: top">meanSquaredError</td>
-        <td style="vertical-align: top; word-wrap: break-word">The accuracy evaluation of the model(Prequnetial Evaluation)</td>
+        <td style="vertical-align: top; word-wrap: break-word">The current Mean Squared Error of the model</td>
         <td style="vertical-align: top">DOUBLE</td>
     </tr>
 </table>
@@ -109,7 +109,7 @@ define stream StreamA (attribute_0 double, attribute_1 double, attribute_2 doubl
 from StreamA#streamingml:updateAMRulesRegressor('model1', 1.0E-7D, 0.05D, 200, 0, 0) 
 select attribute_0, attribute_1, attribute_2, attribute_3, meanSquaredError insert into outputStream;
 ```
-<p style="word-wrap: break-word">An AMRulesRegressor model with the name 'model1' will be built/updated with a split confidence of 1.0E-7D, tie break threshold of 0.05D, a grace period of 200, NoChangeDetection and NoAnomalyDetection using attribute_0, attribute_1, attribute_2, attribute_3 as features and attribute_4 as the target value. The accuracy evaluation will be emitted to the outputStream.</p>
+<p style="word-wrap: break-word">An AMRulesRegressor model with the name 'model1' will be built/updated with a split confidence of 1.0E-7D, tie break threshold of 0.05D, a grace period of 200, NoChangeDetection and NoAnomalyDetection using attribute_0, attribute_1, attribute_2, attribute_3 as features and attribute_4 as the target value. The meanSquaredError will be emitted to the outputStream.</p>
 
 ### AMRulesRegressor *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
@@ -179,7 +179,7 @@ define stream StreamA (attribute_0 double, attribute_1 double, attribute_2 doubl
 from StreamA#streamingml:AMRulesRegressor('model1',  attribute_0, attribute_1, attribute_2, attribute_3) 
 select attribute_0, attribute_1, attribute_2, attribute_3, prediction, meanSquaredError insert into outputStream;
 ```
-<p style="word-wrap: break-word">An AMRules model with the name 'model1' will be used to predict the value for the feature vector represented by attribute_0, attribute_1, attribute_2, attribute_3. Predicted value along with the MeanSquaredError and the feature vector will be emitted to the outputStream. The outputStream will have following definition; (attribute_0 double, attribute_1 double, attribute_2 double, attribute_3 double, prediction double, weightedError double).</p>
+<p style="word-wrap: break-word">An AMRules model with the name 'model1' will be used to predict the value for the feature vector represented by attribute_0, attribute_1, attribute_2, attribute_3. Predicted value along with the MeanSquaredError and the feature vector will be emitted to the outputStream. The outputStream will have following definition; (attribute_0 double, attribute_1 double, attribute_2 double, attribute_3 double, prediction double, meanSquaredError double).</p>
 
 ### hoeffdingTreeClassifier *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#stream-processors">Stream Processor</a>)*
 
